--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             try different shapes, or take the tour<br>
             sit back, relax, and let your imagination free
             <br><br>
-            bonus, <a href="https://www.leapmotion.com/">Leap Motion</a> supported<br>
+            bonus, <a href="https://www.ahem.com/">Leap Motion</a> supported<br>
             <img src="images/hand-pull.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <img src="images/hand-push.png">
         </p>
